; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_bsd_vm.c_vnode_pager_map.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_bsd_vm.c_vnode_pager_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@PAGER_ALL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"vnode_pager_map: %p %x\0A\00", align 1
@KERN_FAILURE = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vnode_pager_map(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* @PAGER_ALL, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* %4, align 4
  %11 = sext i32 %10 to i64
  %12 = inttoptr i64 %11 to i8*
  %13 = call i32 @PAGER_DEBUG(i32 %8, i8* %12)
  %14 = load i32, i32* %3, align 4
  %15 = call %struct.TYPE_3__* @vnode_pager_lookup(i32 %14)
  store %struct.TYPE_3__* %15, %struct.TYPE_3__** %5, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @ubc_map(i32 %18, i32 %19)
  store i32 %20, i32* %6, align 4
  %21 = load i32, i32* %6, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %2
  %24 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %24, i32* %7, align 4
  br label %27

25:                                               ; preds = %2
  %26 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %26, i32* %7, align 4
  br label %27

27:                                               ; preds = %25, %23
  %28 = load i32, i32* %7, align 4
  ret i32 %28
}

declare dso_local i32 @PAGER_DEBUG(i32, i8*) #1

declare dso_local %struct.TYPE_3__* @vnode_pager_lookup(i32) #1

declare dso_local i32 @ubc_map(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
